--- a/scss/style.css
+++ b/scss/style.css
@@ -3,16 +3,8 @@
     opacity: 0; }
   to {
     opacity: 1; } }
-@font-face {
-  font-family: "GTEestiProText";
-  src: url("../fonts/GT-Eesti-Pro-Text-Bold.OTF") format("opentype");
-  font-weight: 700; }
-@font-face {
-  font-family: "GTEestiProText";
-  src: url("../fonts/GT-Eesti-Pro-Text-Regular.OTF") format("opentype");
-  font-weight: 500; }
 body {
-  font-family: 'GTEestiProText', Arial, sans-serif;
+  font-family: Open Sans, Arial, Helvetica, sans-serif;
   background: #f2f2f2; }
 
 ul {
