--- a/scss/style.scss
+++ b/scss/style.scss
@@ -10,27 +10,16 @@ $main-color: #FF4747;
   }
 }
 
-@font-face {
-  font-family: "GTEestiProText";
-  src: url("../fonts/GT-Eesti-Pro-Text-Bold.OTF") format("opentype");
-  font-weight: 700;
-}
-
-@font-face {
-  font-family: "GTEestiProText";
-  src: url("../fonts/GT-Eesti-Pro-Text-Regular.OTF") format("opentype");
-  font-weight: 500;
-}
 
 body {
-  font-family: 'GTEestiProText', Arial, sans-serif;
+  font-family: Open Sans, Arial, Helvetica, sans-serif;
   background: #f2f2f2;
 }
 
-ul{
-	list-style: none;
-	margin: 0;
-	padding: 0;
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
 button {
@@ -226,8 +215,8 @@ nav {
           width: 24px;
           height: 24px;
           color: #fff;
-			background-image: url('../img/icons.png');
-			background-position: -8px -1328px;
+          background-image: url('../img/icons.png');
+          background-position: -8px -1328px;
         }
       }
     }
