--- a/scss/style.css
+++ b/scss/style.css
@@ -1,21 +1,28 @@
 @keyframes show {
   0% {
-    opacity: 0; }
+    opacity: 0;
+  }
   to {
-    opacity: 1; } }
+    opacity: 1;
+  }
+}
 body {
   font-family: Open Sans, Arial, Helvetica, sans-serif;
-  background: #f2f2f2; }
+  background: #f2f2f2;
+}
 
 ul {
   list-style: none;
   margin: 0;
-  padding: 0; }
+  padding: 0;
+}
 
 button {
-  outline: transparent; }
-  button:focus {
-    outline: transparent; }
+  outline: transparent;
+}
+button:focus {
+  outline: transparent;
+}
 
 .btn {
   display: inline-flex;
@@ -32,7 +39,7 @@ button {
   text-decoration: none;
   vertical-align: middle;
   border-radius: 2px;
-  transition: all .08s ease-in-out;
+  transition: all 0.08s ease-in-out;
   user-select: none;
   margin-top: auto;
   border: 2px solid #FF4747;
@@ -40,135 +47,156 @@ button {
   outline: none;
   min-height: 32px;
   color: #fff;
-  background-color: #FF4747; }
-  .btn:hover {
-    color: #fff;
-    background-color: #004ed6; }
+  background-color: #FF4747;
+}
+.btn:hover {
+  color: #fff;
+  background-color: #004ed6;
+}
 
 .container {
   max-width: 1280px;
-  width: 100%; }
+  width: 100%;
+}
 
 .category-title {
   font-size: 30px;
   font-weight: 400;
-  margin-bottom: 0; }
+  margin-bottom: 0;
+}
 .category-count {
   margin-left: 4px;
   font-size: 12px;
-  color: #999; }
+  color: #999;
+}
 
 nav {
-  margin: 10px 0; }
-  nav .logo {
-    display: block;
-    height: 96px;
-    width: 234px;
-    margin-left: 15px;
-    margin-right: 15px;
-    background-repeat: no-repeat;
-    background-size: contain;
-    background-position: 0;
-    background-image: url("../img/logo.gif"); }
-  nav .catalog {
-    position: absolute;
-    display: none;
-    top: 40px;
-    left: 0;
-    z-index: 120;
-    background: #ffffff;
-    border: 2px solid #FF4747;
-    width: 118px; }
-    nav .catalog ul {
-      list-style: none;
-      margin: 0;
-      padding: 10px;
-      text-align: center; }
-      nav .catalog ul li {
-        border-bottom: 1px solid #000; }
-        nav .catalog ul li:last-child {
-          border-bottom: none; }
-        nav .catalog ul li:hover {
-          background-color: #333;
-          color: #c5c5c5; }
-    nav .catalog-button {
-      flex-basis: 135px;
-      cursor: pointer;
-      position: relative; }
-      nav .catalog-button button {
-        width: 118px;
-        height: 40px;
-        border-radius: 3px;
-        background-color: #FF4747;
-        color: #fff;
-        font-weight: 700;
-        padding: 0;
-        border: 0;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        font-size: 14px;
-        line-height: 18px;
-        font-family: GTEestiProDisplay, Arial, sans-serif;
-        cursor: pointer; }
-      nav .catalog-button_burger {
-        width: 24px;
-        height: 24px;
-        margin-right: 12px;
-        background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24'%3E%3Cpath fill='%23fff' d='M9 5h12a1 1 0 010 2H9a1 1 0 110-2zm0 6h12a1 1 0 010 2H9a1 1 0 010-2zm0 6h6a1 1 0 010 2H9a1 1 0 010-2zM3.5 7.5a1.5 1.5 0 110-3 1.5 1.5 0 010 3zm0 6a1.5 1.5 0 110-3 1.5 1.5 0 010 3zm0 6a1.5 1.5 0 110-3 1.5 1.5 0 010 3z'/%3E%3C/svg%3E"); }
-  nav .search {
-    display: flex;
-    position: relative;
-    flex-grow: 1; }
-    nav .search-wrapper {
-      justify-content: flex-start;
-      border: 2px solid #FF4747;
-      border-right-width: 0;
-      border-radius: 3px 0 0 3px;
-      align-items: stretch;
-      height: 36px;
-      width: 100%; }
-      nav .search-wrapper_input {
-        width: 100%;
-        height: 100%;
-        box-sizing: border-box;
-        margin: 0;
-        padding: 0 0 0 8px;
-        border: 1px solid transparent;
-        font-size: 14px;
-        font-family: GTEestiProText, Arial, sans-serif;
-        color: #001a34;
-        line-height: 18px;
-        outline: none;
-        vertical-align: middle;
-        border-radius: 2px 0 0 2px;
-        text-overflow: ellipsis;
-        box-shadow: none; }
-    nav .search-btn {
-      height: 36px;
-      display: flex;
-      align-items: center;
-      min-width: 40px;
-      border-top-right-radius: 3px;
-      border-bottom-right-radius: 3px;
-      overflow: hidden;
-      background-color: #FF4747; }
-      nav .search-btn button {
-        cursor: pointer;
-        border-color: transparent;
-        height: 100%;
-        width: 100%;
-        background-color: #FF4747;
-        border: none; }
-        nav .search-btn button::before {
-          content: "";
-          display: inline-block;
-          vertical-align: middle;
-          width: 24px;
-          height: 24px;
-          color: #fff;
-          background-image: url("../img/icons.png");
-          background-position: -8px -1328px; }
+  margin: 10px 0;
+}
+nav .logo {
+  display: block;
+  height: 96px;
+  width: 212px;
+  margin-left: 15px;
+  margin-right: 15px;
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: 0;
+  background-image: url("../img/logo.gif");
+}
+nav .catalog {
+  position: absolute;
+  display: none;
+  top: 40px;
+  left: 0;
+  z-index: 120;
+  background: #ffffff;
+  border: 2px solid #FF4747;
+  width: 118px;
+}
+nav .catalog ul {
+  list-style: none;
+  margin: 0;
+  padding: 10px;
+  text-align: center;
+}
+nav .catalog ul li {
+  border-bottom: 1px solid #000;
+}
+nav .catalog ul li:last-child {
+  border-bottom: none;
+}
+nav .catalog ul li:hover {
+  background-color: #333;
+  color: #c5c5c5;
+}
+nav .catalog-button {
+  flex-basis: 135px;
+  cursor: pointer;
+  position: relative;
+}
+nav .catalog-button button {
+  width: 118px;
+  height: 40px;
+  border-radius: 3px;
+  background-color: #FF4747;
+  color: #fff;
+  font-weight: 700;
+  padding: 0;
+  border: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 14px;
+  line-height: 18px;
+  font-family: GTEestiProDisplay, Arial, sans-serif;
+  cursor: pointer;
+}
+nav .catalog-button_burger {
+  width: 24px;
+  height: 24px;
+  margin-right: 12px;
+  background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24'%3E%3Cpath fill='%23fff' d='M9 5h12a1 1 0 010 2H9a1 1 0 110-2zm0 6h12a1 1 0 010 2H9a1 1 0 010-2zm0 6h6a1 1 0 010 2H9a1 1 0 010-2zM3.5 7.5a1.5 1.5 0 110-3 1.5 1.5 0 010 3zm0 6a1.5 1.5 0 110-3 1.5 1.5 0 010 3zm0 6a1.5 1.5 0 110-3 1.5 1.5 0 010 3z'/%3E%3C/svg%3E");
+}
+nav .search {
+  display: flex;
+  position: relative;
+  flex-grow: 1;
+}
+nav .search-wrapper {
+  justify-content: flex-start;
+  border: 2px solid #FF4747;
+  border-right-width: 0;
+  border-radius: 3px 0 0 3px;
+  align-items: stretch;
+  height: 36px;
+  width: 100%;
+}
+nav .search-wrapper_input {
+  width: 100%;
+  height: 100%;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0 0 0 8px;
+  border: 1px solid transparent;
+  font-size: 14px;
+  font-family: GTEestiProText, Arial, sans-serif;
+  color: #001a34;
+  line-height: 18px;
+  outline: none;
+  vertical-align: middle;
+  border-radius: 2px 0 0 2px;
+  text-overflow: ellipsis;
+  box-shadow: none;
+}
+nav .search-btn {
+  height: 36px;
+  display: flex;
+  align-items: center;
+  min-width: 40px;
+  border-top-right-radius: 3px;
+  border-bottom-right-radius: 3px;
+  overflow: hidden;
+  background-color: #FF4747;
+}
+nav .search-btn button {
+  cursor: pointer;
+  border-color: transparent;
+  height: 100%;
+  width: 100%;
+  background-color: #FF4747;
+  border: none;
+}
+nav .search-btn button::before {
+  content: "";
+  display: inline-block;
+  vertical-align: middle;
+  width: 24px;
+  height: 24px;
+  color: #fff;
+  background-image: url("../img/icons.png");
+  background-position: -8px -1328px;
+}
 
 .nav-elements {
   width: 32px;
@@ -182,155 +210,223 @@ nav {
   align-items: center;
   justify-content: flex-start;
   padding-top: 8px;
-  margin: 0 15px; }
-  .nav-elements .counter {
-    position: absolute;
-    top: -2px;
-    right: -10px;
-    height: 16px;
-    border-radius: 8px;
-    padding: 0 8px;
-    background-color: #FF4747;
-    color: #fff;
-    font-size: 12px;
-    line-height: 16px;
-    font-family: GTEestiProDisplay, Arial, sans-serif;
-    font-weight: 700; }
-  .nav-elements .icon {
-    width: 24px;
-    height: 24px;
-    margin-bottom: 1px;
-    color: #001a34;
-    display: inline-block;
-    max-width: 64px;
-    max-height: 64px;
-    pointer-events: none;
-    outline: none;
-    line-height: 0;
-    flex-shrink: 0;
-    overflow: hidden; }
-  .nav-elements .desc {
-    color: #001a34;
-    font-family: GTEestiProDisplay, Arial, sans-serif;
-    font-size: 14px;
-    line-height: 18px; }
+  margin: 0 15px;
+}
+.nav-elements .counter {
+  position: absolute;
+  top: -2px;
+  right: -10px;
+  height: 16px;
+  border-radius: 8px;
+  padding: 0 8px;
+  background-color: #FF4747;
+  color: #fff;
+  font-size: 12px;
+  line-height: 16px;
+  font-family: GTEestiProDisplay, Arial, sans-serif;
+  font-weight: 700;
+}
+.nav-elements .icon {
+  width: 24px;
+  height: 24px;
+  margin-bottom: 1px;
+  color: #001a34;
+  display: inline-block;
+  max-width: 64px;
+  max-height: 64px;
+  pointer-events: none;
+  outline: none;
+  line-height: 0;
+  flex-shrink: 0;
+  overflow: hidden;
+}
+.nav-elements .desc {
+  color: #001a34;
+  font-family: GTEestiProDisplay, Arial, sans-serif;
+  font-size: 14px;
+  line-height: 18px;
+}
 
 #whishlist {
   background-image: url("../img/icons.png");
-  background-position: 1px -3592px; }
-  #whishlist:hover {
-    background-position: 1px -3642px; }
+  background-position: 1px -3592px;
+}
+#whishlist:hover {
+  background-position: 1px -3642px;
+}
 
 #cart {
   background-image: url("../img/icons.png");
-  background-position: 0 -2895px; }
-  #cart:hover {
-    background-position: 0 -2947px; }
+  background-position: 0 -2895px;
+}
+#cart:hover {
+  background-position: 0 -2947px;
+}
 
 .category {
   display: flex;
   flex-direction: column;
   font-weight: 700;
-  margin-top: 15%; }
-  .category_title {
-    display: block;
-    font-size: 14px;
-    line-height: 13px;
-    margin-bottom: 10px;
-    font-weight: 700; }
-  .category-item {
-    color: black;
-    font-size: 14px;
-    text-overflow: ellipsis;
-    white-space: nowrap; }
+  margin-top: 15%;
+}
+.category_title {
+  display: block;
+  font-size: 14px;
+  line-height: 13px;
+  margin-bottom: 10px;
+  font-weight: 700;
+}
+.category-item {
+  position: relative;
+  display: inline-block;
+  padding-left: 22px;
+  height: 30px;
+  color: black;
+  font-size: 14px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+.category-item:hover {
+  color: #FF4747;
+}
+.category-item:before {
+  display: block;
+  position: absolute;
+  left: -2px;
+  top: -2px;
+  content: "";
+  width: 24px;
+  height: 24px;
+  vertical-align: top;
+  background-image: url(../img/icons.png);
+  background-repeat: no-repeat;
+}
+.category-item__pc:before {
+  background-position: 0 -675px;
+}
+.category-item__mobile:before {
+  background-position: 0 -2999px;
+}
+.category-item__home:before {
+  background-position: 0 -1571px;
+}
+.category-item__sport:before {
+  background-position: 0 -3504px;
+}
+.category-item__electron:before {
+  background-position: 0 -763px;
+}
+.category-item__pc:hover:before {
+  background-position: 0 -719px;
+}
+.category-item__mobile:hover:before {
+  background-position: 0 -3043px;
+}
+.category-item__home:hover:before {
+  background-position: 0 -1615px;
+}
+.category-item__sport:hover:before {
+  background-position: 0 -3548px;
+}
+.category-item__electron:hover:before {
+  background-position: 0 -807px;
+}
 
 .card {
   border: none;
-  border-radius: 8px; }
-  .card-img-wrapper {
-    position: relative;
-    display: flex;
-    margin: 0 auto;
-    text-align: center;
-    background-color: #e5e6eb;
-    background-image: url(../img/temp.png);
-    background-size: 220px 220px;
-    width: 220px;
-    height: 220px;
-    cursor: pointer; }
-  .card-img-top {
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    margin: auto;
-    max-width: 200px;
-    max-height: 200px;
-    background-position: center;
-    background-size: contain;
-    background-repeat: no-repeat; }
-  .card:hover {
-    box-shadow: 0 1px 8px 0 rgba(0, 0, 0, 0.08); }
-    .card:hover .card-add-wishlist {
-      opacity: 1;
-      animation: show .5s ease-in-out; }
-  .card-title {
-    overflow: hidden;
-    color: #333;
-    font-size: 16px;
-    line-height: 1.38;
-    padding-bottom: 6px;
-    position: relative;
-    z-index: 4;
-    white-space: nowrap;
-    text-overflow: ellipsis;
-    margin-bottom: 0; }
-    .card-title:hover {
-      text-decoration: underline;
-      cursor: pointer;
-      color: #FF4747; }
-  .card-body {
-    display: flex;
-    flex-direction: column; }
-  .card-price {
-    font-size: 22px;
-    font-weight: 700;
-    letter-spacing: .3px; }
-  .card-add-wishlist {
-    width: 32px;
-    height: 32px;
-    background-image: url(../img/icons.png);
-    background-position: 4px -2588px;
-    border-radius: 50%;
-    text-align: center;
-    line-height: 32px;
-    position: absolute;
-    right: 8px;
-    bottom: 8px;
-    opacity: 0;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.08);
-    border: none; }
-    .card-add-wishlist:hover {
-      background-color: #f90;
-      background-position: 4px -2588px; }
-    .card-add-wishlist.active {
-      background-position: 4px -2632px; }
-      .card-add-wishlist.active:hover {
-        background-color: #ccc; }
-  .card-store {
-    text-decoration: underline;
-    overflow: hidden;
-    white-space: nowrap;
-    text-overflow: ellipsis;
-    cursor: pointer;
-    font-size: 12px;
-    line-height: 16px;
-    color: #999; }
-    .card-store:hover {
-      color: #FF4747; }
+  border-radius: 8px;
+  width: 220px;
+}
+.card-img-wrapper {
+  position: relative;
+  display: flex;
+  margin: 0 auto;
+  text-align: center;
+  background-color: #e5e6eb;
+  background-image: url(../img/temp.png);
+  background-size: 220px 220px;
+  width: 220px;
+  height: 220px;
+  cursor: pointer;
+}
+.card-img-top {
+  width: 100%;
+  height: 100%;
+  background-position: center;
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+.card:hover {
+  box-shadow: 0 1px 8px 0 rgba(0, 0, 0, 0.08);
+}
+.card:hover .card-add-wishlist {
+  opacity: 1;
+  animation: show 0.5s ease-in-out;
+}
+.card-title {
+  overflow: hidden;
+  color: #333;
+  font-size: 12px;
+  line-height: 1.38;
+  padding-bottom: 6px;
+  position: relative;
+  z-index: 4;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  margin-bottom: 0;
+}
+.card-title:hover {
+  text-decoration: underline;
+  cursor: pointer;
+  color: #FF4747;
+}
+.card-body {
+  display: flex;
+  flex-direction: column;
+}
+.card-price {
+  font-size: 22px;
+  font-weight: 700;
+  letter-spacing: 0.3px;
+}
+.card-add-wishlist {
+  width: 32px;
+  height: 32px;
+  background-image: url(../img/icons.png);
+  background-position: 4px -2588px;
+  border-radius: 50%;
+  text-align: center;
+  line-height: 32px;
+  position: absolute;
+  right: 8px;
+  bottom: 8px;
+  opacity: 0;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.08);
+  border: none;
+}
+.card-add-wishlist:hover {
+  background-color: #f90;
+  background-position: 4px -2588px;
+}
+.card-add-wishlist.active {
+  background-position: 4px -2632px;
+}
+.card-add-wishlist.active:hover {
+  background-color: #ccc;
+}
+.card-store {
+  text-decoration: underline;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  cursor: pointer;
+  font-size: 12px;
+  line-height: 16px;
+  color: #999;
+}
+.card-store:hover {
+  color: #FF4747;
+}
 
 .cart {
   display: none;
@@ -340,53 +436,67 @@ nav {
   width: 100%;
   height: 100%;
   background-color: #00000050;
-  z-index: 130; }
-  .cart-body {
-    position: relative;
-    margin: auto;
-    width: 1024px;
-    min-height: 200px;
-    max-height: 640px;
-    background-color: #fff;
-    padding: 25px;
-    overflow: auto;
-    border-radius: 3px; }
-  .cart-title {
-    font-size: 28px;
-    color: #4d5f71; }
-  .cart-wrapper {
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    margin: 25px 0;
-    border: 1px solid #4d5f713f;
-    border-radius: 3px;
-    padding: 20px; }
-    .cart-wrapper #cart-empty {
-      font-size: 24px;
-      color: #4d5f71; }
-    .cart-wrapper .card {
-      width: 33%; }
-      @media (max-width: 992px) {
-        .cart-wrapper .card {
-          width: 50%; } }
-      @media (max-width: 768px) {
-        .cart-wrapper .card {
-          width: 70%; } }
-  .cart-close {
-    position: absolute;
-    top: 25px;
-    right: 25px;
-    cursor: pointer;
-    height: 25px;
-    width: 25px;
-    background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24'%3E%3Cpath fill='005bff' d='M12 10.587l6.293-6.294a1 1 0 111.414 1.414l-6.293 6.295 6.293 6.294a1 1 0 11-1.414 1.414L12 13.416 5.707 19.71a1 1 0 01-1.414-1.414l6.293-6.294-6.293-6.295a1 1 0 011.414-1.414L12 10.587z'/%3E%3C/svg%3E"); }
-  .cart-total {
-    font-size: 18px; }
-    .cart-total span {
-      color: #077c24; }
-  .cart-confirm {
-    display: block;
-    margin-left: auto; }
+  z-index: 130;
+}
+.cart-body {
+  position: relative;
+  margin: auto;
+  width: 1024px;
+  min-height: 200px;
+  max-height: 640px;
+  background-color: #fff;
+  padding: 25px;
+  overflow: auto;
+  border-radius: 3px;
+}
+.cart-title {
+  font-size: 28px;
+  color: #4d5f71;
+}
+.cart-wrapper {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  margin: 25px 0;
+  border: 1px solid #4d5f713f;
+  border-radius: 3px;
+  padding: 20px;
+}
+.cart-wrapper #cart-empty {
+  font-size: 24px;
+  color: #4d5f71;
+}
+.cart-wrapper .card {
+  width: 33%;
+}
+@media (max-width: 992px) {
+  .cart-wrapper .card {
+    width: 50%;
+  }
+}
+@media (max-width: 768px) {
+  .cart-wrapper .card {
+    width: 70%;
+  }
+}
+.cart-close {
+  position: absolute;
+  top: 25px;
+  right: 25px;
+  cursor: pointer;
+  height: 25px;
+  width: 25px;
+  background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24'%3E%3Cpath fill='005bff' d='M12 10.587l6.293-6.294a1 1 0 111.414 1.414l-6.293 6.295 6.293 6.294a1 1 0 11-1.414 1.414L12 13.416 5.707 19.71a1 1 0 01-1.414-1.414l6.293-6.294-6.293-6.295a1 1 0 011.414-1.414L12 10.587z'/%3E%3C/svg%3E");
+}
+.cart-total {
+  font-size: 18px;
+}
+.cart-total span {
+  color: #077c24;
+}
+.cart-confirm {
+  display: block;
+  margin-left: auto;
+}
 
 /*# sourceMappingURL=style.css.map */
