--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,4 +1,5 @@
 $main-color: #FF4747;
+$second-color: #ff9a00;
 
 @keyframes show {
   0% {
@@ -29,6 +30,7 @@ input[type="number"]::-webkit-outer-spin-button {
   appearance: none;
   margin: 0;
 }
+
 input[type="number"] {
   -moz-appearance: textfield;
 }
@@ -202,7 +204,7 @@ nav {
       }
     }
 
-    &-btn {
+    &-wrap-brn {
       height: 36px;
       display: flex;
       align-items: center;
@@ -212,24 +214,26 @@ nav {
       overflow: hidden;
       background-color: $main-color;
 
-      button {
-        cursor: pointer;
-        border-color: transparent;
-        height: 100%;
-        width: 100%;
-        background-color: $main-color;
-        border: none;
 
-        &::before {
-          content: "";
-          display: inline-block;
-          vertical-align: middle;
-          width: 24px;
-          height: 24px;
-          color: #fff;
-          background-image: url('../img/icons.png');
-          background-position: -8px -1328px;
-        }
+    }
+
+    &-btn {
+      cursor: pointer;
+      border-color: transparent;
+      height: 100%;
+      width: 100%;
+      background-color: $main-color;
+      border: none;
+
+      &::before {
+        content: "";
+        display: inline-block;
+        vertical-align: middle;
+        width: 24px;
+        height: 24px;
+        color: #fff;
+        background-image: url('../img/icons.png');
+        background-position: -8px -1328px;
       }
     }
   }
@@ -395,10 +399,12 @@ nav {
 
 .card {
   border: none;
+
   border-radius: 8px;
   width: 220px;
   top: 0;
   left: 0;
+
   &-wrapper {
     position: relative;
   }
@@ -433,6 +439,10 @@ nav {
     box-shadow: 0 1px 8px 0 rgba(0, 0, 0, .08);
     position: absolute;
     z-index: 1;
+
+    .card-title {
+      white-space: normal;
+    }
 
     .card-add-wishlist {
       opacity: 1;
@@ -478,14 +488,15 @@ nav {
   &-add-cart {
     display: none;
     margin: 0 auto;
-    background: #ff9a00;
+    background: $second-color;
     padding: 3px 9px;
     min-width: 165px;
     color: #fff;
     border-color: transparent;
     font-size: 16px;
     border-radius: 8px;
-    &:hover{
+
+    &:hover {
 
     }
   }
@@ -553,7 +564,7 @@ nav {
     margin: auto;
     width: 1024px;
     min-height: 200px;
-    max-height: 640px;
+    max-height: 80vh;
     background-color: #fff;
     padding: 25px;
     overflow: auto;
@@ -620,6 +631,7 @@ nav {
 
   .goods {
     display: flex;
+    width: 100%;
     justify-content: space-between;
     background-color: #fff;
     border-radius: 8px;
@@ -636,10 +648,11 @@ nav {
     }
 
     &-description {
-      margin: 0 10px;
+      padding: 10px;
+      flex-grow: 1;
     }
 
-    &-title{
+    &-title {
       font-size: 16px;
     }
 
@@ -662,6 +675,7 @@ nav {
       text-align: center;
       line-height: 32px;
       border: none;
+
       &:hover {
 
       }
@@ -684,9 +698,93 @@ nav {
       justify-content: center;
     }
 
-    &-count-total{
+    &-count-total {
       width: 32px;
     }
 
   }
+}
+
+@keyframes spinner-loading {
+  0% {
+    transform: rotate(0deg)
+  }
+  100% {
+    transform: rotate(360deg)
+  }
+}
+
+#spinner {
+  margin: 0 auto;
+  width: 200px;
+  height: 200px;
+  overflow: hidden;
+  background: none;
+}
+
+.spinner-loading > div > div {
+  transform-origin: 100px 100px;
+  animation: spinner-loading 3.0303030303030303s linear infinite;
+  opacity: 0.8
+}
+
+.spinner-loading > div > div > div {
+  position: absolute;
+  left: 30px;
+  top: 30px;
+  width: 70px;
+  height: 70px;
+  border-radius: 70px 0 0 0;
+  transform-origin: 100px 100px
+}
+
+.spinner-loading > div div:nth-child(1) {
+  animation-duration: 0.7575757575757576s
+}
+
+.spinner-loading > div div:nth-child(1) > div {
+  background: $main-color;
+  transform: rotate(0deg);
+}
+
+.spinner-loading > div div:nth-child(2) {
+  animation-duration: 1.0101010101010102s
+}
+
+.spinner-loading > div div:nth-child(2) > div {
+  background: #FF43D5;
+  transform: rotate(0deg);
+}
+
+.spinner-loading > div div:nth-child(3) {
+  animation-duration: 1.5151515151515151s
+}
+
+.spinner-loading > div div:nth-child(3) > div {
+  background: $second-color;
+  transform: rotate(0deg);
+}
+
+.spinner-loading > div div:nth-child(4) {
+  animation-duration: 3.0303030303030303s
+}
+
+.spinner-loading > div div:nth-child(4) > div {
+  background: #0061FF;
+  transform: rotate(0deg);
+}
+
+
+
+.spinner-loading {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  transform: translateZ(0) scale(1);
+  backface-visibility: hidden;
+  transform-origin: 0 0; /* see note above */
+}
+
+.spinner-loading div {
+  box-sizing: content-box;
 }
