--- a/scss/style.css
+++ b/scss/style.css
@@ -388,6 +388,7 @@ nav .search-btn::before {
 .card-img-top {
   width: 100%;
   height: 100%;
+  object-fit: cover;
   background-position: center;
   background-size: contain;
   background-repeat: no-repeat;
