--- a/scss/style.scss
+++ b/scss/style.scss
@@ -451,6 +451,7 @@ nav {
     &-top {
       width: 100%;
       height: 100%;
+      object-fit: cover;
       background-position: center;
       background-size: contain;
       background-repeat: no-repeat;
