--- a/scss/style.scss
+++ b/scss/style.scss
@@ -314,7 +314,7 @@ nav {
   }
 }
 
-#whishlist {
+#wishlist {
   background-image: url('../img/icons.png');
   background-position: 1px -3592px;
 
@@ -695,14 +695,14 @@ nav {
       height: 32px;
       background-color: transparent;
       background-image: url(../img/icons.png);
-      background-position: 4px -2590px;
+      background-position: 4px -2589px;
       border-radius: 50%;
       text-align: center;
       line-height: 32px;
       border: none;
 
-      &:hover {
-
+      &.active {
+        background-position: 4px  -2633px;
       }
     }
 
@@ -813,7 +813,7 @@ nav {
   box-sizing: content-box;
 }
 
-.search.error{
+.search.error {
   -webkit-animation: 2s linear error;
   -o-animation: 2s linear error;
   animation: 2s linear error;
